--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,6 @@
-stages:  
-  - execute-script
-
-
-variables:
-  GIT_STRATEGY: clone
-
-# Job pour les événements "issue"
-execute-python-on-issue-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
-
-
-
-
 # stages:  
 #   - execute-script
+
 
 # variables:
 #   GIT_STRATEGY: clone
@@ -36,7 +8,6 @@ execute-python-on-pr-update:
 # # Job pour les événements "issue"
 # execute-python-on-issue-update:
 #   stage: execute-script
-#   interruptible: true  # Ajout de l'option interruptible
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
 #   rules:
@@ -47,12 +18,41 @@ execute-python-on-pr-update:
 # # Job pour les événements "merge_request"
 # execute-python-on-pr-update:
 #   stage: execute-script
-#   interruptible: true  # Ajout de l'option interruptible
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
 #   rules:
 #     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+
+
+
+
+stages:  
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+# Job pour les événements "issue"
+execute-python-on-issue-update:
+  stage: execute-script
+  interruptible: true  # Ajout de l'option interruptible
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# Job pour les événements "merge_request"
+execute-python-on-pr-update:
+  stage: execute-script
+  interruptible: true  # Ajout de l'option interruptible
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
 
 # stages:
