--- a/.github/workflows/sync-issues.yml
+++ b/.github/workflows/sync-issues.yml
@@ -12,18 +12,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Important pour avoir l'historique complet
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install python-dotenv requests
+
       - name: Execute sync script
         run: |
-          python3  /script_sync/issue_sync.py
+          cd script_sync  # Se déplacer dans le dossier
+          python3 issue_sync.py  # Exécuter avec le chemin relatif
         env:
           GITHUB_TOKEN: ${{ secrets.HUB_TOKEN }}
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-
 
 
